# workstation

./: .ansible-lint  .editorconfig  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .pre-commit-config.yml  .prettierignore  .prettierrc.js  .yamllint.yml  NOTES.md  README.md  TODO.md  Vagrantfile  alis.conf  alis.sh  ansible.cfg  c.js  get  get.sh  hosts  install.conf  install.sh  install_.conf  package.json  part.yml  playbook.yml  playbook_alternatives.yml  playbook_virtualbox.yml  playbook_virtualbox_prestart.yml  pyproject.toml  requirements.yml  run  sl.js  update
.obsidian/: app.json  community-plugins.json  core-plugins-migration.json  graph.json  workspace.json
data/: country-data.json  language-codes_json.json  mirror_countries.json
docs/: _notes.md  awesome-tools.md  directories_and_files.md  hardware.md  index.md  keybindings.md  keyboard.md  rice.md  todo.md  users_and_groups.md  xdg.md
docs/1. User guide/: 1. Getting started.md  2. Ansible.md  3. Self management.md
docs/2. Development guide/: 1. Getting started.md  2. Bash script development.md  2. Project directory structure.md  3. Ansible Style Guide.md  3. Bash script development.md  4. Bash script development.md  5. Test Ansible Playbook.md  6. Ansible Tips.md  External links.md  Use QEMU&KVM and Virt Manager.md
docs/Ansible/: External links.md  Use QEMU&KVM and Virt Manager.md
docs/Gnome/: DConf.md  Gnome Wayland session issues.md
docs/References/: Linux distributions.md
playbooks/: base.yml  development.yml  gnome.yml  graphical_environment.yml  nix.yml  test.yml
roles/alternatives/: README.md
roles/applications/: README.md
roles/build-dependencies/: README.md
roles/build-tools/: README.md
roles/curl/: README.md
roles/env/: README.md
roles/facts/: README.md
roles/fonts/: README.md
roles/fonts_content/: README.md
roles/git/: README.md
roles/gnome/: README.md
roles/hardware-support/: README.md
roles/i3/: README.md
roles/kde-apps/: README.md
roles/keyboard/: README.md
roles/kitty/: README.md
roles/lightdm/: README.md
roles/nix/: README.md
roles/package-management/: README.md
roles/package-management-setup/: README.md
roles/packages-upgrade/: README.md
roles/paru/: README.md
roles/pip/: README.md
roles/polybar/: README.md
roles/prepare/: README.md
roles/python/: README.md
roles/rofi/: README.md
roles/rust/: README.md
roles/ssh/: README.md
roles/system-setup/: README.md
roles/upgrade/: README.md
roles/user-actions/: README.md
roles/user-apps/: README.md
roles/vga/: README.md
roles/virtualbox-guest/: README.md
roles/virtualization/: README.md
roles/xorg/: README.md
roles/yay/: README.md
roles/zsh/: README.md
roles_/applications/: README.md
roles_/development-tools/: README.md
roles_/gnome/: README.md
roles_/gnome_shell/: README.md
roles_/gnome_shell_appearance/: README.md
roles_/gnome_shell_base/: README.md
utils/: gpu-vendor
wstrc/: __main__.py
(+1519 files in other folders)
