[project]
name = "wst"
version = "0.1.0"
description = "Ansible playbooks and self-management tools to setup Arch Linux workstation"
readme = "README.md"
authors = [{ name = "Vyacheslav Shimarulin", email = "shimarulin@gmail.com" }]
requires-python = ">= 3.11"
dependencies = [
  "questionary = 2.0.1",
  "yaspin = 3.0.1",
  "copier = 9.1.0",
  "jinja2-getenv-extension = 1.0.2",
  "copier-templates-extensions = 0.3.0",
]

[project.scripts]
wstrc = "wstrc.__main__:cli"

[tool.poetry]
name = "wst"
version = "0.1.0"
description = "Ansible playbooks and self-management tools to setup Arch Linux workstation"
authors = ["Vyacheslav Shimarulin <shimarulin@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tools/**/*.py" },
    { include = "wstrc/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
questionary = "^2.0.1"
yaspin = "^3.0.1"
copier = "^9.1.0"
jinja2-getenv-extension = "^1.0.2"
copier-templates-extensions = "^0.3.0"

[tool.poetry.scripts]
setvars = 'tools.commands.setvars:main'

[tool.poe.tasks]
"mkrole" = "./tools/bin/mkrole"
"setvars" = "./tools/bin/setvars"
"build:scripts" = "./tools/build/build-scripts.sh"
"lint:ansible" = "ansible-lint"
"lint:md" = "mdformat --check **/*.md"
"fmt:md" = "mdformat **/*.md"
"fmt:yaml" = "yamlfix **/*.{yml,yaml}"
"vm:build" = "vagrant provision"
"vm:start" = "vagrant up"
"vm:stop" = "vagrant halt"
"vm:restart" = "vagrant halt && vagrant up"
"vm:rebuild" = "vagrant halt && vagrant destroy && vagrant up"

[tool.yamlfix]
comments_min_spaces_from_content = 1
comments_require_starting_space = true
comments_whitelines = 1
explicit_start = true
none_representation = "null"
preserve_quotes = false
quote_basic_values = true
quote_representation = '"'
section_whitelines = 1
sequence_style = "block_style"
whitelines = 1
